data collected. Add: final datasets to run analysis on. Summaries of the best models so far

--- a/tex/sections/c0/secondpage.tex
+++ b/tex/sections/c0/secondpage.tex
@@ -1,11 +1,17 @@
 \pagestyle{empty}
 
 \vspace*{0.5cm}
-\textbf{Advisor:}\\
-Your advisor's name\\
-German Research Center for Artificial Intelligence\\
-Saarland Informatics Campus\\
-Saarbrücken, Germany
+\textbf{Advisors:}\\
+Prof. Dr. Vera Demberg\\
+Computer Science and Computational Linguistics\\
+Saarland University\\
+Saarbrücken, Germany\\\\
+
+Dr. John Duff\\
+Computer Science and Computational Linguistics\\
+Saarland University\\
+Saarbrücken, Germany\\\\
+
 
 \vspace*{2.5cm}
 \textbf{\color{red}  Reviewer 1: ADD THE NAME}\\
