--- a/tex/sections/relatedWork.tex
+++ b/tex/sections/relatedWork.tex
@@ -20,7 +20,7 @@ Although, the idea of communication as a signaling game goes back to \cite{Lewis
 \label{fig:simple_complex}
 \end{figure}
 
-Let's take a closer look at \autoref{fig:simple}. An uttered message is presented in the top. We will denote the object being referred to as a target, a competitor is an object that shares the message property with the target. While a distractor does not share the sent message property, but could share another property with the target depending on the difficulty of the trial. Note that obviously, captions target, competitor and distractor are not available to the participants. The difference between the simple and complex trials in \autoref{fig:simple_complex} mainly in how the distractor is constructed. In particular, in the simple trial it does not share any properties with the target, while in the complex it does. The simple example \autoref{fig:simple} can be solved without considering the distractor. That is, one could count the matching messages from the available ones. In this case, it would be 1 for blue square, 2 for blue circle and 2 for green triangle. Hence, the target is blue square, as ``blue'' is the only message that could refer to it. This way of solving is not necessarily what people tend to do, but it is one way of interpreting the difference between simple and complex trials. Because if you apply the same strategy to the complex example in \autoref{fig:complex}, both target and competitor have two matching messages. On the other hand, if you try to solve these examples yourself, you will probably end up recursively reasoning of what the speaker could have said had they had another target. The simple and complex in this case still appear to their names, you will need a more robust recursion in order to do solve the complex one comparing to the simple one.
+Let's take a closer look at \autoref{fig:simple}. An uttered message is presented on the top. We will denote the object being referred to as a target, a competitor is an object that shares the message property with the target. While a distractor does not share the sent message property, but could share another property with the target depending on the difficulty of the trial. Note that, obviously, captions target, competitor and distractor are not available to the participants. The difference between the simple and complex trials in \autoref{fig:simple_complex} mainly in how the distractor is constructed. In particular, in the simple trial it does not share any properties with the target, while in the complex it does. The simple example \autoref{fig:simple} can be solved without considering the distractor. That is, one could count the matching messages from the available ones. In this case, it would be 1 for blue square, 2 for blue circle and 2 for green triangle. Hence, the target is blue square, as ``blue'' is the only message that could refer to it. This way of solving is not necessarily what people tend to do, but it is one way of interpreting the difference between simple and complex trials. Because if you apply the same strategy to the complex example in \autoref{fig:complex}, both target and competitor have two matching messages. On the other hand, if you try to solve these examples yourself, you will probably end up recursively reasoning of what the speaker could have said had they had another target. The simple and complex in this case still appear to their names, you will need a more robust recursion in order to solve the complex one comparing to the simple one.
 
 \section{Rational Speech Act Model} \label{sec:rsa}
 Studying this phenomena needs a formalized approach. One such model, called the Rational Speech Act (RSA) was developed. It mimics how a speaker and a listener reason about each other. A detailed explanation can be found in the manuscript by \cite{Frank_2016} as well as in the article \cite{Franke_2016}. We will go through the main ideas of how listener and speaker interact with each other. Firstly, take a look at the matrix $M_s$ from the \autoref{eq:1}. Each columns is a one-hot encoding of an objects, in other words this matrix encodes which objects match the literal meaning of each message, this matrix is constructed for the simple example in \autoref{fig:simple}. 
