add: concept in the final thesis pdf

--- a/tex/sections/concept.tex
+++ b/tex/sections/concept.tex
@@ -1,2 +1,35 @@
 ﻿\chapter{Concept}
  
+Previous work on individual differences \cite{Franke_2016} has focused on differences in underlying pragmatic reasoning tendencies. However participants with the same underlying pragmatic tendencies may underperform based on the information in the problem that they pay attention to. Take for example the hypothesis we saw in \autoref{sec:rsa}, there not paying attention to the distractor would mean that the problem simply becomes unsolvable. Therefore, cognitive abilities such as attention and working memory are most likely not the only features contributing to the performance of participants in these tasks.
+
+This thesis aims to shed light on the realm of where the attention is spent during the pragmatic reasoning problem-solving task. And the eye tracking data will be used to investigate this. 
+
+\section{Research Questions}
+\label{sec:research_questions}
+
+\subsection{Estimating the Posterior}
+\label{sec:posterior}
+At first, we are interested in predicting the posterior, that is the probability of a participant to solve a problem give the eye gaze features as well as the general information about the trial.
+
+\subsubsection{Research Hypothesis 1}
+\label{sec:h1}
+As we discussed in \autoref{sec:rsa}, the distractor in the hypothesis is a crucial part of the problem. Therefore, it is important to understand how participants interact with the distractor. The first research hypothesis is H1: Proportional time on distractor is positively associated with accuracy on Complex trials.
+
+\subsubsection{Research Hypothesis 2}
+\label{sec:h2}
+The second research question is about the messages that are available to the participants. The second research hypothesis is H2: Proportional time on available messages is positively associated with accuracy on Simple trials. This hypothesis is mainly based on the idea that while the unambiguous trials can be solved without considering the available messages, the simple ones require one to consider the available messages. In addition, the Complex trials can be solved without looking at the available messages.
+
+\subsection{Estimating the Likelihood}
+\label{sec:likelihood}
+
+Because of the same patterns of information, we expect that skilled participants should in general have a different attention profile in Simple trials than in Complex trials. Therefore, we would like to do a slightly alternative analysis, estimating the likelihood directly instead of trying to estimate the posterior. In order to realize this, we will only take the correctly solved trials into account and predict the probability of a each fixation to be on the area of interest.
+
+\subsubsection{Research Hypothesis 3}
+\label{sec:h3}
+The third research hypothesis is H3: on correctly solved trials, Complex trial condition is positively associated with the probability of fixation being on the distractor. 
+
+\subsubsection{Research Hypothesis 4}
+\label{sec:h4}
+The fourth research hypothesis is H4: on correctly solved trials, Simple trial condition is positively associated with the probability of fixation being on the available messages.
+
+
