--- a/analysis/preprocessing_and_init_analysis.ipynb
+++ b/analysis/preprocessing_and_init_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "102"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,11 +744,11 @@
     "conditional_dfs = []\n",
     "conditions = ['simple', 'complex', 'unambiguous']\n",
     "\n",
-    "final_conditions = ['any'] + conditions\n",
+    "final_conditions = ['all'] + conditions\n",
     "\n",
     "def explode_by_condition(row):\n",
     "    for condition in final_conditions:\n",
-    "        condition_str = '' if condition == 'any' else condition[0].upper() + condition[1:]\n",
+    "        condition_str = '' if condition == 'all' else condition[0].upper() + condition[1:]\n",
     "        yield pd.DataFrame({'Subject': row['workerid'], \n",
     "                             'Condition': condition,\n",
     "                             'PropTimeOnSentMsg': row['propTimeOnSentMsg' + condition_str],\n",
@@ -1972,7 +1972,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml2024",
+   "display_name": "thesis",
    "language": "python",
    "name": "python3"
   },
@@ -1986,7 +1986,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
