add: partial description of implementation to final thesis, fix typos

--- a/tex/references.bib
+++ b/tex/references.bib
@@ -1,3 +1,25 @@
+@inproceedings{lingoturk,
+  title={LingoTurk: managing crowdsourced tasks for psycholinguistics},
+  author={Pusse, Florian and Sayeed, Asad and Demberg, Vera},
+  booktitle={Proceedings of the 2016 Conference of the North American Chapter of the Association for Computational Linguistics: Demonstrations},
+  pages={57--61},
+  year={2016}
+}
+
+@article{prolific,
+title = {Prolific.ac—A subject pool for online experiments},
+journal = {Journal of Behavioral and Experimental Finance},
+volume = {17},
+pages = {22-27},
+year = {2018},
+issn = {2214-6350},
+doi = {https://doi.org/10.1016/j.jbef.2017.12.004},
+url = {https://www.sciencedirect.com/science/article/pii/S2214635017300989},
+author = {Stefan Palan and Christian Schitter},
+keywords = {Prolific, Online experiment, Subject pool},
+abstract = {The number of online experiments conducted with subjects recruited via online platforms has grown considerably in the recent past. While one commercial crowdworking platform – Amazon’s Mechanical Turk – basically has established and since dominated this field, new alternatives offer services explicitly targeted at researchers. In this article, we present www.prolific.ac and lay out its suitability for recruiting subjects for social and economic science experiments. After briefly discussing key advantages and challenges of online experiments relative to lab experiments, we trace the platform’s historical development, present its features, and contrast them with requirements for different types of social and economic experiments.}
+}
+
 @article{Frank_2012,
 author = {Michael C. Frank  and Noah D. Goodman },
 title = {Predicting Pragmatic Reasoning in Language Games},
