--- a/tex/sections/relatedWork.tex
+++ b/tex/sections/relatedWork.tex
@@ -30,13 +30,13 @@ M_s = \!\!\!\!
 \begin{array}{c@{\;}c}
     & {
     \begin{array}{*{4}{C{20pt}}} 
-        \inlinegraphics{images/blue_square.png} & \inlinegraphics{images/blue_circle.png} & \inlinegraphics{images/green_triangle.png}  
+        \inlinegraphics{images/shapes_and_colors/blue_square.png} & \inlinegraphics{images/shapes_and_colors/blue_circle.png} & \inlinegraphics{images/shapes_and_colors/green_triangle.png}  
       \end{array}} \\[5pt]
     \begin{array}{c} 
-        \inlinegraphics{images/blue.png} \\ 
-        \inlinegraphics{images/circle.png} \\ 
-        \inlinegraphics{images/green.png} \\
-        \inlinegraphics{images/triangle.png}
+        \inlinegraphics{images/shapes_and_colors/blue.png} \\ 
+        \inlinegraphics{images/shapes_and_colors/circle.png} \\ 
+        \inlinegraphics{images/shapes_and_colors/green.png} \\
+        \inlinegraphics{images/shapes_and_colors/triangle.png}
     \end{array} 
     & 
     \left[
@@ -60,13 +60,13 @@ L_0(M_s)=L(M_s) =\!\!\!\!
 \begin{array}{c@{\;}c}
     & {
     \begin{array}{*{3}{C{20pt}}} 
-        \inlinegraphics{images/blue_square.png} & \inlinegraphics{images/blue_circle.png} & \inlinegraphics{images/green_triangle.png}  
+        \inlinegraphics{images/shapes_and_colors/blue_square.png} & \inlinegraphics{images/shapes_and_colors/blue_circle.png} & \inlinegraphics{images/shapes_and_colors/green_triangle.png}  
       \end{array}} \\[5pt]
     \begin{array}{c} 
-        \inlinegraphics{images/blue.png} \\ 
-        \inlinegraphics{images/circle.png} \\ 
-        \inlinegraphics{images/green.png} \\
-        \inlinegraphics{images/triangle.png}
+        \inlinegraphics{images/shapes_and_colors/blue.png} \\ 
+        \inlinegraphics{images/shapes_and_colors/circle.png} \\ 
+        \inlinegraphics{images/shapes_and_colors/green.png} \\
+        \inlinegraphics{images/shapes_and_colors/triangle.png}
     \end{array} 
     & 
     \left[
@@ -86,13 +86,13 @@ S_0(M_s)=S(M_s) = \!\!\!\!
 \begin{array}{c@{\;}c}
     & {
     \begin{array}{*{4}{C{20pt}}} 
-        \inlinegraphics{images/blue_square.png} & \inlinegraphics{images/blue_circle.png} & \inlinegraphics{images/green_triangle.png}  
+        \inlinegraphics{images/shapes_and_colors/blue_square.png} & \inlinegraphics{images/shapes_and_colors/blue_circle.png} & \inlinegraphics{images/shapes_and_colors/green_triangle.png}  
       \end{array}} \\[5pt]
     \begin{array}{c} 
-        \inlinegraphics{images/blue.png} \\ 
-        \inlinegraphics{images/circle.png} \\ 
-        \inlinegraphics{images/green.png} \\
-        \inlinegraphics{images/triangle.png}
+        \inlinegraphics{images/shapes_and_colors/blue.png} \\ 
+        \inlinegraphics{images/shapes_and_colors/circle.png} \\ 
+        \inlinegraphics{images/shapes_and_colors/green.png} \\
+        \inlinegraphics{images/shapes_and_colors/triangle.png}
     \end{array} 
     & 
     \left[
@@ -114,13 +114,13 @@ L_1(M_s)=L(S(M_s)) = \!\!\!\!
 \begin{array}{c@{\;}c}
     & {
     \begin{array}{*{4}{C{20pt}}} 
-        \inlinegraphics{images/blue_square.png} & \inlinegraphics{images/blue_circle.png} & \inlinegraphics{images/green_triangle.png}  
+        \inlinegraphics{images/shapes_and_colors/blue_square.png} & \inlinegraphics{images/shapes_and_colors/blue_circle.png} & \inlinegraphics{images/shapes_and_colors/green_triangle.png}  
       \end{array}} \\[5pt]
     \begin{array}{c} 
-        \inlinegraphics{images/blue.png} \\ 
-        \inlinegraphics{images/circle.png} \\ 
-        \inlinegraphics{images/green.png} \\
-        \inlinegraphics{images/triangle.png}
+        \inlinegraphics{images/shapes_and_colors/blue.png} \\ 
+        \inlinegraphics{images/shapes_and_colors/circle.png} \\ 
+        \inlinegraphics{images/shapes_and_colors/green.png} \\
+        \inlinegraphics{images/shapes_and_colors/triangle.png}
     \end{array} 
     & 
     \left[
@@ -142,13 +142,13 @@ M_c = \!\!\!\!
 \begin{array}{c@{\;}c}
     & {
     \begin{array}{*{4}{C{20pt}}} 
-        \inlinegraphics{images/blue_square.png} & \inlinegraphics{images/blue_circle.png} & \inlinegraphics{images/green_square.png}  
+        \inlinegraphics{images/shapes_and_colors/blue_square.png} & \inlinegraphics{images/shapes_and_colors/blue_circle.png} & \inlinegraphics{images/shapes_and_colors/green_square.png}  
       \end{array}} \\[5pt]
     \begin{array}{c} 
-        \inlinegraphics{images/blue.png} \\ 
-        \inlinegraphics{images/circle.png} \\ 
-        \inlinegraphics{images/square.png} \\
-        \inlinegraphics{images/triangle.png}
+        \inlinegraphics{images/shapes_and_colors/blue.png} \\ 
+        \inlinegraphics{images/shapes_and_colors/circle.png} \\ 
+        \inlinegraphics{images/shapes_and_colors/square.png} \\
+        \inlinegraphics{images/shapes_and_colors/triangle.png}
     \end{array} 
     & 
     \left[
@@ -170,13 +170,13 @@ L_1(M_c) = L(S(M_c)) = \!\!\!\!
 \begin{array}{c@{\;}c}
     & {
     \begin{array}{*{3}{C{20pt}}} 
-        \inlinegraphics{images/blue_square.png} & \inlinegraphics{images/blue_circle.png} & \inlinegraphics{images/green_square.png}  
+        \inlinegraphics{images/shapes_and_colors/blue_square.png} & \inlinegraphics{images/shapes_and_colors/blue_circle.png} & \inlinegraphics{images/shapes_and_colors/green_square.png}  
       \end{array}} \\[5pt]
     \begin{array}{c} 
-        \inlinegraphics{images/blue.png} \\ 
-        \inlinegraphics{images/circle.png} \\ 
-        \inlinegraphics{images/square.png} \\
-        \inlinegraphics{images/triangle.png}
+        \inlinegraphics{images/shapes_and_colors/blue.png} \\ 
+        \inlinegraphics{images/shapes_and_colors/circle.png} \\ 
+        \inlinegraphics{images/shapes_and_colors/square.png} \\
+        \inlinegraphics{images/shapes_and_colors/triangle.png}
     \end{array} 
     & 
     \left[
@@ -198,13 +198,13 @@ L_2(M_c) = L(S(L(M_c))) = \!\!\!\!
 \begin{array}{c@{\;}c}
     & {
     \begin{array}{*{4}{C{20pt}}} 
-        \inlinegraphics{images/blue_square.png} & \inlinegraphics{images/blue_circle.png} & \inlinegraphics{images/green_square.png}  
+        \inlinegraphics{images/shapes_and_colors/blue_square.png} & \inlinegraphics{images/shapes_and_colors/blue_circle.png} & \inlinegraphics{images/shapes_and_colors/green_square.png}  
       \end{array}} \\[5pt]
     \begin{array}{c} 
-        \inlinegraphics{images/blue.png} \\ 
-        \inlinegraphics{images/circle.png} \\ 
-        \inlinegraphics{images/square.png} \\
-        \inlinegraphics{images/triangle.png}
+        \inlinegraphics{images/shapes_and_colors/blue.png} \\ 
+        \inlinegraphics{images/shapes_and_colors/circle.png} \\ 
+        \inlinegraphics{images/shapes_and_colors/square.png} \\
+        \inlinegraphics{images/shapes_and_colors/triangle.png}
     \end{array} 
     & 
     \left[
@@ -248,13 +248,13 @@ M_s' = \!\!\!\!
 \begin{array}{c@{\;}c}
     & {
     \begin{array}{*{4}{C{20pt}}} 
-        \inlinegraphics{images/blue_square.png} & \inlinegraphics{images/blue_circle.png}  
+        \inlinegraphics{images/shapes_and_colors/blue_square.png} & \inlinegraphics{images/shapes_and_colors/blue_circle.png}  
       \end{array}} \\[5pt]
     \begin{array}{c} 
-        \inlinegraphics{images/blue.png} \\ 
-        \inlinegraphics{images/circle.png} \\ 
-        \inlinegraphics{images/green.png} \\
-        \inlinegraphics{images/triangle.png}
+        \inlinegraphics{images/shapes_and_colors/blue.png} \\ 
+        \inlinegraphics{images/shapes_and_colors/circle.png} \\ 
+        \inlinegraphics{images/shapes_and_colors/green.png} \\
+        \inlinegraphics{images/shapes_and_colors/triangle.png}
     \end{array} 
     & 
     \left[
@@ -274,13 +274,13 @@ M_c' = \!\!\!\!
 \begin{array}{c@{\;}c}
     & {
     \begin{array}{*{4}{C{20pt}}} 
-        \inlinegraphics{images/blue_square.png} & \inlinegraphics{images/blue_circle.png}
+        \inlinegraphics{images/shapes_and_colors/blue_square.png} & \inlinegraphics{images/shapes_and_colors/blue_circle.png}
       \end{array}} \\[5pt]
     \begin{array}{c} 
-        \inlinegraphics{images/blue.png} \\ 
-        \inlinegraphics{images/circle.png} \\ 
-        \inlinegraphics{images/square.png} \\
-        \inlinegraphics{images/triangle.png}
+        \inlinegraphics{images/shapes_and_colors/blue.png} \\ 
+        \inlinegraphics{images/shapes_and_colors/circle.png} \\ 
+        \inlinegraphics{images/shapes_and_colors/square.png} \\
+        \inlinegraphics{images/shapes_and_colors/triangle.png}
     \end{array} 
     & 
     \left[
@@ -302,13 +302,13 @@ L_1(M_s') = \!\!\!\!
 \begin{array}{c@{\;}c}
     & {
     \begin{array}{*{4}{C{20pt}}} 
-        \inlinegraphics{images/blue_square.png} & \inlinegraphics{images/blue_circle.png}  
+        \inlinegraphics{images/shapes_and_colors/blue_square.png} & \inlinegraphics{images/shapes_and_colors/blue_circle.png}  
       \end{array}} \\[5pt]
     \begin{array}{c} 
-        \inlinegraphics{images/blue.png} \\ 
-        \inlinegraphics{images/circle.png} \\ 
-        \inlinegraphics{images/green.png} \\
-        \inlinegraphics{images/triangle.png}
+        \inlinegraphics{images/shapes_and_colors/blue.png} \\ 
+        \inlinegraphics{images/shapes_and_colors/circle.png} \\ 
+        \inlinegraphics{images/shapes_and_colors/green.png} \\
+        \inlinegraphics{images/shapes_and_colors/triangle.png}
     \end{array} 
     & 
     \left[
@@ -330,13 +330,13 @@ L(M_c') = L(S(M_c')) = L(S(L(M_c'))) = \!\!\!\!
 \begin{array}{c@{\;}c}
     & {
     \begin{array}{*{4}{C{20pt}}} 
-        \inlinegraphics{images/blue_square.png} & \inlinegraphics{images/blue_circle.png}
+        \inlinegraphics{images/shapes_and_colors/blue_square.png} & \inlinegraphics{images/shapes_and_colors/blue_circle.png}
       \end{array}} \\[5pt]
     \begin{array}{c} 
-        \inlinegraphics{images/blue.png} \\ 
-        \inlinegraphics{images/circle.png} \\ 
-        \inlinegraphics{images/square.png} \\
-        \inlinegraphics{images/triangle.png}
+        \inlinegraphics{images/shapes_and_colors/blue.png} \\ 
+        \inlinegraphics{images/shapes_and_colors/circle.png} \\ 
+        \inlinegraphics{images/shapes_and_colors/square.png} \\
+        \inlinegraphics{images/shapes_and_colors/triangle.png}
     \end{array} 
     & 
     \left[
